# sparke

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  startup.sh
doc/: setup_instructions.md  simulation.md
dockerfiles/: Dockerfile.sparke  Dockerfile.sparke_base  Dockerfile.sparke_dev  requirements.txt
scripts/: build_base_docker.sh  enter_dev_docker.sh  setup_dev.sh  source_all.sh  start_dev_docker.sh
setup/: initial_setup.sh  setup_instructions.md
src/angle_joint_controller/: package.xml  setup.cfg  setup.py
src/angle_joint_controller/angle_joint_controller/: angle_joint_controller.py  sparke_joint_controller.py
src/angle_joint_controller/params/: sparke_joint_controller.yaml
src/i2c_interfaces/: CMakeLists.txt  package.xml
src/ros_i2cpwm_board/: CMakeLists.txt  README.md  package.xml
src/ros_i2cpwm_board/launch/: i2cpwm_node_launch.py
src/ros_i2cpwm_board/src/: i2cpwm_controller.cpp
src/servo_move_keyboard/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/servo_move_keyboard/launch/: keyboard_move_launch.py
src/servo_move_keyboard/scripts/: servoConfigTest.py  servoMoveKeyboard.py
src/servo_move_keyboard/servo_move_keyboard/: servoConfigTest.py  servoMoveKeyboard.py
src/sim_joint_controller/: CMakeLists.txt  package.xml
src/sim_joint_controller/src/: sim_joint_controller.cpp  sim_joint_controller_command.cpp
src/sparke_bringup/: CMakeLists.txt  package.xml
src/sparke_bringup/launch/: gazebo_bringup.launch.py  simulation_bringup.launch.py  sparke_bringup.launch.py
src/sparke_bringup/params/: sparke_reset_manager_params.yaml
src/sparke_deep_learning/: package.xml  setup.cfg  setup.py
src/sparke_deep_learning/sparke_deep_learning/: sparke_AI_node.py  sparke_gait_generator.py
src/sparke_deep_learning/sparke_deep_learning/sparke_deep_learning_submodule/: sparke_gait_generator.py
src/sparke_description/: CMakeLists.txt  package.xml
src/sparke_description/launch/: display.launch.py  gui_display.launch.py  sparke_effort.launch.py
src/sparke_description/params/: simple_controller.yaml  simple_controller_effort_test.yaml  sparke_controller_effort.yaml  sparke_nav2_params.yaml
src/sparke_description/rviz/: urdf_config.rviz
src/sparke_description/src/: sparke-test-world.world  sparke.urdf.xacro  sparke_spot.urdf.xacro
src/sparke_description/src/maps/: map.pgm  map.yaml
src/sparke_description/src/sparke-test-building/: model.config  model.sdf
src/sparke_lifecycle_manager/: package.xml  setup.cfg  setup.py
src/sparke_lifecycle_manager/sparke_lifecycle_manager/: sparke_lifecycle_manager.py  sparke_reset_manager.py  sparke_sim_service_node.py
src/sparke_ml/: package.xml  setup.cfg  setup.py
src/sparke_ml/sparke_ml/: example_code.py  more_sample_code.py  sparke_tensorflow.py
src/sparke_motion/: package.xml  setup.cfg  setup.py
src/sparke_motion/sparke_motion/: sparke_gait_controller.py  sparke_motion_controller.py  sparke_motion_ctrl_node.py
src/sparke_motion/sparke_motion/libs/sparkeKinematics/: LICENSE  README.md
src/sparke_motion/sparke_motion/libs/sparkeKinematics/kinematics_np/: base_transformations.py  leg_transformations.py  sparke_base_IK.py  sparke_leg_IK.py  test_plotter.py
src/sparke_motion_cpp/: CMakeLists.txt  package.xml
src/sparke_motion_cpp/include/sparke_motion_cpp/: gait_ctrl.hpp
src/sparke_motion_cpp/src/: gait_ctrl.cpp  sparke_cpp_gait_controller.cpp
src/sparke_reset_manager/: package.xml  setup.cfg  setup.py
src/sparke_reset_manager/sparke_reset_manager/: sparke_reset_manager.py  test.py
src/spot_micro_keyboard_command/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/spot_micro_keyboard_command/scripts/: spotMicroKeyboardMove.py
src/spot_micro_keyboard_command/spot_micro_keyboard_command/: spotMicroKeyboardMove.py
src/spot_micro_motion_cmd/: CMakeLists.txt  package.xml
src/spot_micro_motion_cmd/config/: sim_sparke_params.yaml  sparke_params.yaml
src/spot_micro_motion_cmd/include/spot_micro_motion_cmd/: spot_micro_motion_cmd.h  utils.h
src/spot_micro_motion_cmd/launch/: motion_cmd.launch.py  motion_cmd_launch.py
src/spot_micro_motion_cmd/libs/spot_micro_kinematics_cpp/: CMakeLists.txt
src/spot_micro_motion_cmd/src/: spot_micro_motion_cmd.cpp  spot_micro_motion_cmd_node.cpp  utils.cpp
src/spot_micro_motion_cmd/src/smfsm/: command.h
