<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>ros_i2cpwm_board</name>
  <version>0.5.1</version>
  <description>
	Controller for the Adafruit 16 channel PWM servo I2C board, hat, and similar PCA9685 based boards.
	Provides absolute proportional PWM control as well as supports geometry_msgs/Twist.
  </description>
  <author>Bradan Lane Studio</author>
  <maintainer email="locoro@bradanlane.com">bradanlane</maintainer>
  <license>GPLv3</license>
  <url>https://gitlab.com/bradanlane/ros-i2cpwmboard</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>libi2c-dev</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>i2c_interfaces</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
